--- a/portfolio/portfolio-final/projects-folder/projects.html
+++ b/portfolio/portfolio-final/projects-folder/projects.html
@@ -130,7 +130,9 @@
 
 				<p>I designed this ArcGIS Online Dashboard to focus on current wildfires in the USA, when/where they are reported, type/size of active fire, and what the incident name is. The datasets used in this dashboard are updated every 15 minutes using ESRI's Aggregated Live Feed Methodology (<a href="https://www.arcgis.com/home/group.html?content=all&id=c42fd84aa35a4ab39806f6481b80c0a0#overview" target="_blank">click on this link for more on ESRI Live Feeds</a>). Wildfire points are sourced from <a href="https://forestsandrangelands.gov/WFIT/applications/IRWIN/index.shtml" target="_blank">Integrated Reporting of Wildland-Fire Information (IRWIN)</a> and perimeters from <a href="https://data-nifc.opendata.arcgis.com/" target="_blank">National Interagency Fire Center (NIFC)</a>. The Satellite (VIIRS) Thermal Hotspots and Fire Activity layer represents thermal activity detected by the VIIRS sensors on the NOAA/NASA Suomi NPP and NOAA-20 satellites during the last 7 days. For an overview of the data you see in this map, visit the <a href="https://www.arcgis.com/home/item.html?id=d957997ccee7408287a963600a77f61f" target="_blank">USA Current Wildfires feature layer</a> and the<a href="https://www.arcgis.com/home/item.html?id=dece90af1a0242dcbf0ca36d30276aa3" target="_blank"> Satellite Thermal Hotspots and Fire Activity feature layer</a>. Snapshot of dashboard above was taken 04/08/2023.</p>
 
-				<div class="project-link">
+			</li>
+
+			<div class="project-link">
 
 				<a href="https://www.arcgis.com/apps/dashboards/7b9e28814e584003b874f675db54b0ce" target="_blank">
 				<img class="project-img" src="LivingAtlas_WildFire_Mobile_Dashboard_Thumbnail.jpg"/>
@@ -143,6 +145,35 @@
 				<p>For mobile users, this dashboard has been reconfigured to provide as much information to the user while not cluttering the smaller screen. Snapshot of dashboard above was taken 04/08/2023.</p>
 			
 			</li>
+
+			<div class="project-link">
+
+				<a href="https://www.arcgis.com/apps/dashboards/9882d257da614bea8d343de29224ab6d" target="_blank">
+				<img class="project-img" src="LivingAtlas_EVCharging_Dashboard_Thumbnail.jpg"/>
+				</a>
+				
+			</div>
+
+			<li class="project-content">
+
+				<p>I designed this ArcGIS Online Dashboard to focus on current Electric Vehicle Charging Stations in the USA and Canada. This data is maintained by an Aggregated Live Feed routine that accesses the US Department of Energy's National Renewable Energy Laboratory (NREL) <a href="https://developer.nrel.gov/docs/transportation/alt-fuel-stations-v1/" target="_blank">API website</a> on a daily basis. For an overview of the data you see in this map, visit the <a href="https://www.arcgis.com/home/item.html?id=4a8305b53ed7416795fc6a129ec989ee" target="_blank">Alternative Fuel Station feature layer</a>. Snapshot of dashboard above was taken 04/08/2023.</p>
+			
+			</li>
+
+			<div class="project-link">
+
+				<a href="https://www.arcgis.com/apps/dashboards/6850d3b259ff4b468a439be596323391" target="_blank">
+				<img class="project-img" src="LivingAtlas_EVCharging_Mobile_Dashboard_Thumbnail.jpg"/>
+				</a>
+				
+			</div>
+
+			<li class="project-content">
+
+				<p>For mobile users, this dashboard has been reconfigured to provide as much information to the user while not cluttering the smaller screen. Snapshot of dashboard above was taken 04/08/2023.</p>
+			
+			</li>
+
 		</ul>
 
 <h3 class="project-subsection"><a name="ClioGraphica">ClioGraphica</a></h3>
