--- a/portfolio/portfolio-final/resume.html
+++ b/portfolio/portfolio-final/resume.html
@@ -63,7 +63,7 @@
 
 		<header>
 
-			<strong><a class="resume-short" href="resume-short-07-22-22.pdf" target="_blank">One Page (compressed) Resume - follow this link</a></strong>
+			<strong><a class="resume-short" href="resume-short-12-30-23.pdf" target="_blank">One Page (compressed) Resume - follow this link</a></strong>
 
 			<div class="log-divider">. . . . . . .</div>
 
@@ -261,6 +261,20 @@
 			<hr>
 
 					<section>
+						<h2 class="resume-headline">Professional Certifications</h2>
+							<strong>Certified Geographic Information Systems Professional (GISP)</strong>
+								<ul>
+									<li class="resume-list">Issued by Geographic Information System Certification Institute (GISCI): <span class="resume">December, 2023</span></li>
+									<li class="resume-list"><a href="https://www.gisci.org/Recertification/GISP-Registry" target="_blank">GISP Registry Credential ID</a>: <span>161719</span></li>
+								</ul>
+					</section>
+			<hr>
+
+<div class="resume-section-buffer"></div>
+
+			<hr>
+
+					<section>
 						<h2 class="resume-headline">Honors</h2>
 							<strong>University of Connecticut</strong>
 								<ul>
@@ -449,7 +463,7 @@
 	</div>
 
 	<a href="#">
-		<footer>Click to return to top of page | Last edited by Zachary C. Raslan : April 8th, 2023
+		<footer>Click to return to top of page | Last edited by Zachary C. Raslan : December 30th, 2023
 		</footer>
 	</a>
 
