--- a/portfolio/portfolio-final/resume.html
+++ b/portfolio/portfolio-final/resume.html
@@ -232,6 +232,20 @@
 			<hr>
 
 <div class="resume-section-buffer"></div>
+
+			<hr>
+
+					<section>
+						<h2 class="resume-headline">Professional Certifications</h2>
+							<strong>Certified Geographic Information Systems Professional (GISP)</strong>
+								<ul>
+									<li class="resume-list">Issued by Geographic Information System Certification Institute (GISCI): <span class="resume">December, 2023</span></li>
+									<li class="resume-list"><a href="https://www.gisci.org/Recertification/GISP-Registry" target="_blank">GISP Registry Credential ID</a>: <span>161719</span></li>
+								</ul>
+					</section>
+			<hr>
+
+<div class="resume-section-buffer"></div>
 				<hr>
 					<section>
 						<h2 class="resume-headline">Education</h2>
@@ -252,20 +266,6 @@
 								<div class="sub-head-list">Spring 2011</div>
 								<ul>
 									<li class="resume-list">Member and graduate of the Academy of Finance: Member of the Future Business Leaders of America (FBLA)</li>
-								</ul>
-					</section>
-			<hr>
-
-<div class="resume-section-buffer"></div>
-
-			<hr>
-
-					<section>
-						<h2 class="resume-headline">Professional Certifications</h2>
-							<strong>Certified Geographic Information Systems Professional (GISP)</strong>
-								<ul>
-									<li class="resume-list">Issued by Geographic Information System Certification Institute (GISCI): <span class="resume">December, 2023</span></li>
-									<li class="resume-list"><a href="https://www.gisci.org/Recertification/GISP-Registry" target="_blank">GISP Registry Credential ID</a>: <span>161719</span></li>
 								</ul>
 					</section>
 			<hr>
@@ -310,7 +310,7 @@
 			<hr>
 
 					<section>
-						<h2 class="resume-headline">Professional Academic Conferences</h2>
+						<h2 class="resume-headline">Academic Conferences</h2>
 							<strong><a href="http://zraslan.github.io/portfolio/portfolio-final/projects-folder/cliography-poster.pdf" target="_blank">UConn Frontiers Poster Exhibition</a></strong>
 								<div class="sub-head-list">Author, Presenter</div>
 								<div class="sub-head-list">04/10/2015</div>
@@ -451,7 +451,7 @@
 					<section>
 						<h2 class="resume-headline">Interests and Activities</h2>
 							<strong>Academic</strong>
-								<p class="resume-list">Digital Humanities history, Historical Geography, GIS,  Historical GIS, Cliography, Cartography, Historiography, Pre/Ancient/Classical history, Cultural history, history of religion and effect on social development with a focus on history of Graeco-Arabic Translation Movement (2CE – 10CE)</p>
+								<p class="resume-list">Volunteer mapper with Humanitarian OpenStreetMap Team, Digital Humanities history, Historical Geography, GIS,  Historical GIS, Cliography, Cartography, Historiography, Pre/Ancient/Classical history, Cultural history, history of religion and effect on social development with a focus on history of Graeco-Arabic Translation Movement (2CE – 10CE)</p>
 							<strong>Recreational</strong>
 								<p class="resume-list">Crafts and outdoors: Fishing, hiking, camping, wood-working, metal-working; Music: drums, trumpet, guitar, banjo, harmonica, mouth harp, tin whistle; Martial arts: Brazilian Jiu-Jitsu, Krav-Maga, And Tae Kwon Do</P>
 					</section>
