updated index with GISP

--- a/portfolio/portfolio-final/index.html
+++ b/portfolio/portfolio-final/index.html
@@ -22,7 +22,7 @@
 
 <body>
 	
-	<h1>Zachary C. Raslan</h1>
+	<h1>Zachary C. Raslan, GISP</h1>
 
 <nav class="portfolio-navigation">
 		<ul class="index-navigation-menu">
